--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build:only": "tsc -b && vite build",
+    "build:chrome": "npm run build:only && node copy-extension-files.mjs",
+    "build": "npm run build:chrome",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -18,7 +20,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.10"
+    "tailwindcss": "^4.1.10",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
